2010-10-29  Mike Lawther  <mikelawther@chromium.org>

Reviewed by James Robinson.

        Fix canvas/philip/tests/2d.imageData.get.source.negative
        https://bugs.webkit.org/show_bug.cgi?id=48277

        Remove canvas/philip/tests/2d.imageData.get.source.negative from chromium skipped.
        Also remove spurious trailing newlines from 2d.imageData.get.source.negative-expected.txt

        * canvas/philip/tests/2d.imageData.get.source.negative-expected.txt:
        * platform/chromium/test_expectations.txt:
2010-10-29  Mike Lawther  <mikelawther@chromium.org>

        Reviewed by James Robinson.

        Fix canvas/philip/tests/2d.imageData.get.source.negative
        https://bugs.webkit.org/show_bug.cgi?id=48277

        Handle negative width/height.
        See http://www.whatwg.org/specs/web-apps/current-work/multipage/the-canvas-element.html#pixel-manipulation

        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::getImageData):

Canonical link: https://commits.webkit.org/61460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70957 268f45cc-cd09-0410-ab3c-d52691b4dbfc